[workspace]
resolver = "3"
members = [
  "crates/visitors",
  "standalone",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.92.0"
license-file = "LICENSE"
publish = false

[workspace.dependencies]
actix-web = "4.12.1"
argon2 = "0.5.3"
base64 = "0.22.1"
bb8 = "0.9.1"
jsonwebtoken = "10.2.0"
log = "0.4.29"
pretty_env_logger = "0.5.0"
rand = "0.9.2"
redis = "1.0.2"
sqlx = "0.8.6"
tokio = "1.48.0"
