[package]
name = "valmiki"
version = "0.2.0"
edition = "2024"
rust-version = "1.92.0"
license-file = "LICENSE"

[workspace]
resolver = "3"
members = []

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.92.0"
license-file = "LICENSE"

[workspace.dependencies]
actix-web = "4.12.1"
anyhow = "1.0.100"
argon2 = "0.5.3"
base64 = "0.22.1"
bb8 = "0.9.1"
derive_more = "2.1.1"
dotenvy = "0.15.7"
jsonwebtoken = "10.2.0"
log = "0.4.29"
pretty_env_logger = "0.5.0"
rand = "0.9.2"
redis = "1.0.2"
sqlx = "0.8.6"
tokio = "1.48.0"

[[bin]]
name = "valmiki"
path = "src/bin/standalone.rs"

[dependencies]
actix-web = { version = "4.12.1", features = ["secure-cookies"] }
anyhow = { version = "1.0.100" }
base64 = { version = "0.22.1" }
derive_more = { version = "2.1.1", features = ["display", "from_str"] }
log = { version = "0.4.29", features = [
  "max_level_debug",
  "release_max_level_info",
  "std"
] }
pretty_env_logger = { version = "0.5.0" }
rand = { version = "0.9.2" }
sqlx = { version = "0.8.6", features = [
  "chrono",
  "ipnetwork",
  "json",
  "runtime-tokio"
], optional = true }
tokio = { version = "1.48.0", features = ["full"] }

[features]
default = ["sqlite"]
postgres = []
sqlite = ["dep:sqlx", "sqlx/sqlite"]
