[package]
name = "valmiki"
version = "0.2.0"
edition = "2024"
rust-version = "1.92.0"
license-file = "LICENSE"

[[bin]]
name = "valmiki"
path = "src/bin/standalone.rs"

[dependencies]
actix = { version = "0.13.5" }
actix-web = { version = "4.12.1", features = ["secure-cookies"] }
anyhow = { version = "1.0.100" }
base64 = { version = "0.22.1" }
blake3 = { version = "1.8.3", features = ["digest"] }
cacache = { version = "13.1.0", default-features = false, features = [
  "mmap",
  "tokio-runtime"
] }
derive_more = { version = "2.1.1", features = ["display", "from_str"] }
log = { version = "0.4.29", features = [
  "max_level_debug",
  "release_max_level_info",
  "std"
] }
moka = { version = "0.12.12", features = ["future"] }
pretty_env_logger = { version = "0.5.0" }
rand = { version = "0.9.2" }
sqlx = { version = "0.8.6", features = [
  "chrono",
  "ipnetwork",
  "json",
  "runtime-tokio"
], optional = true }
tokio = { version = "1.48.0", features = ["full"] }

[features]
default = ["sqlite"]
postgres = []
sqlite = ["dep:sqlx", "sqlx/sqlite"]
